# donate

./: README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml  ci.yml  release.yaml
donate/: __main__.py  configuration.py  currency.py  donation.py  donee.py  ledger.py  logs.py  maths.py  schedule.py
donate/test/: conftest.py  test_configuration.py  test_maths.py  test_stats.py
tests/: conftest.py  test_configuration.py  test_currency.py  test_donation.py  test_ledger.py  test_logs.py  test_main.py  test_maths.py  test_schedules.py
