[tool.poetry]
name = "donate"
version = "0.8.0"
description = "Generate donations to projects you want to support according to a distribution you control."
authors = ["Jim Madge <jmmadge@gmail.com>"]
license = "GPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "*"
python-dateutil = "*"
pyxdg = "*"
pyyaml = "*"
tabulate = "*"
typer = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "*"
pytest-cov = "*"
types-pyyaml = "*"
types-tabulate = "*"

[tool.poetry.scripts]
donate = "donate.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
